--- a/main.html
+++ b/main.html
@@ -8,6 +8,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<section id="buttons">
+		<button class="btn" data-sound="applause">Applause</button>
+		<button class="btn" data-sound="boo">Boo</button>
+		<button class="btn" data-sound="gasp">Gasp</button>
+		<button class="btn" data-sound="tada">Tada</button>
+		<button class="btn" data-sound="victory">Victory</button>
+		<button class="stop">Stop</button>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
