--- a/main.html
+++ b/main.html
@@ -16,6 +16,11 @@
 		<button class="btn" data-sound="victory">Victory</button>
 		<button class="stop">Stop</button>
 	</section>
+	<audio id="applause" src="./sounds/applause.mp3"></audio>
+	<audio id="boo" src="./sounds/boo.mp3"></audio>
+	<audio id="gasp" src="./sounds/gasp.mp3"></audio>
+	<audio id="tada" src="./sounds/tada.mp3"></audio>
+	<audio id="victory" src="./sounds/victory.mp3"></audio>
     <script type="text/javascript" src="./script.js">
 </script>
 
